# nexari

./: .nexari_session.json  CLA.md  LICENSE  README.md  bedrock.py  cla.yml  pyproject.toml  requirements.txt  sagemaker_train.py
.devcontainer/: devcontainer.json
nexari/: cli.py  config.py  session.py
nexari.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nexari/agent/: discoverer.py  interpreter.py  selector.py
nexari/llm/: base.py
nexari/pipeline/: deployer.py  trainer.py
nexari/pipeline/scripts/: sagemaker_train.py
nexari/preview/: server.py
